@@ -1,6 +1,7 @@
 Release Note
 
 * 11/25/2014
+  * added unlockTasks
   * added maxAttemptES
   * using merge scout attributes    
 
